--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,8 @@ services:
   db:
     image: postgres:latest
     environment:
-      POSTGRES_USER: roberto mora diaz 04
-      POSTGRES_PASSWORD: futbolista
+      POSTGRES_USER: user
+      POSTGRES_PASSWORD: password
       POSTGRES_DB: proyectodb
     ports:
       - "5432:5432"
@@ -16,4 +16,5 @@ services:
 
 volumes:
   postgres-data:
+
 
